chore: initialize octopus coordination for secure-inquiry epic
- Add epic.md with acceptance criteria
- Define shared contracts (types.ts)
- Prepare worktrees for 3 tentacles:
  - t1-core: crypto, models, env
  - t2-services: sanitizer, mockAi, auditLog
  - t3-integration: controllers, tests, docker

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,13 @@ drizzle/migrations/
 .vscode
 *.swp
 *.swo
+
+# Octopus worktrees
+.worktrees/
+
+# Audit data
+data/*.json
+!data/.gitkeep
+
+# Octopus tentacle worktrees
+.worktrees/
