--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.3.0",
+    "fast-check": "^4.5.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
